Archive2/dd/404c7361152a20/output
main.cpp:3:18: error: use of undeclared identifier 'std'
    explicit bar(std::size_t length) : baz(length <= 128 ? array : pointer) {
                 ^
main.cpp:8:5: error: use of undeclared identifier 'boost'
    boost::variant<array_and_length, pointer_and_length> baz;
    ^
main.cpp:8:19: error: expected member name or ';' after declaration specifiers
    boost::variant<array_and_length, pointer_and_length> baz;
    ~~~~~~~~~~~~~~^
main.cpp:3:60: error: use of undeclared identifier 'array'
    explicit bar(std::size_t length) : baz(length <= 128 ? array : pointer) {
                                                           ^
main.cpp:3:68: error: use of undeclared identifier 'pointer'
    explicit bar(std::size_t length) : baz(length <= 128 ? array : pointer) {
                                                                   ^
5 errors generated.
